// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should highlight the word at front 1`] = `
<DynaHighlightText
  caseSensitive={false}
  highlightWords="secret"
  onHighlightRender={[Function]}
  sourceText="Secret world"
>
  <u
    key="0-0"
  >
    Secret
  </u>
   world
</DynaHighlightText>
`;

exports[`Home should highlight the word at the end 1`] = `
<DynaHighlightText
  caseSensitive={false}
  highlightWords="world"
  onHighlightRender={[Function]}
  sourceText="Secret world"
>
  Secret 
  <u
    key="7-0"
  >
    world
  </u>
</DynaHighlightText>
`;

exports[`Home should highlight the word at the end 2`] = `
<DynaHighlightText
  caseSensitive={false}
  highlightWords="Secret"
  onHighlightRender={[Function]}
  sourceText="The secret world"
>
  The 
  <u
    key="4-0"
  >
    secret
  </u>
   world
</DynaHighlightText>
`;
